Fix forecast display in daily mode, add dail/hourly forecast selection, add install script

--- a/base_weatherentity/base_weatherentity.html
+++ b/base_weatherentity/base_weatherentity.html
@@ -85,14 +85,13 @@
       <div class="vertical-detail" data-bind="visible: forecast_temperature_min">
         <span class="secondary-climacon" data-bind="css: forecast_icon"></span>
       </div>
-      <div class="vertical-detail" data-bind="visible: forecast_temperature_min">
+      <div class="vertical-detail vertical-detail-text" data-bind="visible: forecast_temperature_min">
         <span class="secondary-info" data-bind="text: forecast_temperature_min"></span>
         <span class="secondary-info" data-bind="html: unit, attr: {style: sub_unit_style}"></span>
-        <span class="secondary-info" data-bind="visible: forecast_temperature_max">
-          <span>/</span>
+        <div class="secondary-info" data-bind="visible: forecast_temperature_max">
           <span class="secondary-info" data-bind="text: forecast_temperature_max"></span>
           <span class="secondary-info" data-bind="html: unit, attr: {style: sub_unit_style}"></span>
-        </span>
+        </div>
       </div>
       <div class="vertical-detail" data-bind="visible: forecast_precip_probability">
         <span class="secondary-icon mdi" title="Rain" data-bind="visible: prefer_icons, css: forecast_precip_type_icon"></span>
@@ -109,14 +108,13 @@
       <div class="vertical-detail" data-bind="visible: forecast_temperature_min2">
         <span class="secondary-climacon" data-bind="css: forecast_icon2"></span>
       </div>
-      <div class="vertical-detail" data-bind="visible: forecast_temperature_min2">
+      <div class="vertical-detail vertical-detail-text" data-bind="visible: forecast_temperature_min2">
         <span class="secondary-info" data-bind="text: forecast_temperature_min2"></span>
         <span class="secondary-info" data-bind="html: unit, attr: {style: sub_unit_style}"></span>
-        <span class="secondary-info" data-bind="visible: forecast_temperature_max2">
-          <span>/</span>
+        <div class="secondary-info" data-bind="visible: forecast_temperature_max2">
           <span class="secondary-info" data-bind="text: forecast_temperature_max2"></span>
           <span class="secondary-info" data-bind="html: unit, attr: {style: sub_unit_style}"></span>
-        </span>
+        </div>
       </div>
       <div class="vertical-detail" data-bind="visible: forecast_precip_probability2">
         <span class="secondary-icon mdi" title="Rain" data-bind="visible: prefer_icons, css: forecast_precip_type_icon"></span>
@@ -133,14 +131,13 @@
       <div class="vertical-detail" data-bind="visible: forecast_temperature_min3">
         <span class="secondary-climacon" data-bind="css: forecast_icon3"></span>
       </div>
-      <div class="vertical-detail" data-bind="visible: forecast_temperature_min3">
+      <div class="vertical-detaili vertical-detail-text" data-bind="visible: forecast_temperature_min3">
         <span class="secondary-info" data-bind="text: forecast_temperature_min3"></span>
         <span class="secondary-info" data-bind="html: unit, attr: {style: sub_unit_style}"></span>
-        <span class="secondary-info" data-bind="visible: forecast_temperature_max3">
-          <span>/</span>
+        <div class="secondary-info" data-bind="visible: forecast_temperature_max3">
           <span class="secondary-info" data-bind="text: forecast_temperature_max3"></span>
           <span class="secondary-info" data-bind="html: unit, attr: {style: sub_unit_style}"></span>
-        </span>
+        </div>
       </div>
       <div class="vertical-detail" data-bind="visible: forecast_precip_probability3">
         <span class="secondary-icon mdi" title="Rain" data-bind="visible: prefer_icons, css: forecast_precip_type_icon"></span>
@@ -157,14 +154,13 @@
       <div class="vertical-detail" data-bind="visible: forecast_temperature_min4">
         <span class="secondary-climacon" data-bind="css: forecast_icon4"></span>
       </div>
-      <div class="vertical-detail" data-bind="visible: forecast_temperature_min4">
+      <div class="vertical-detaili vertical-detail-text" data-bind="visible: forecast_temperature_min4">
         <span class="secondary-info" data-bind="text: forecast_temperature_min4"></span>
         <span class="secondary-info" data-bind="html: unit, attr: {style: sub_unit_style}"></span>
-        <span class="secondary-info" data-bind="visible: forecast_temperature_max4">
-          <span>/</span>
+        <div class="secondary-info" data-bind="visible: forecast_temperature_max4">
           <span class="secondary-info" data-bind="text: forecast_temperature_max4"></span>
           <span class="secondary-info" data-bind="html: unit, attr: {style: sub_unit_style}"></span>
-        </span>
+        </div>
       </div>
       <div class="vertical-detail" data-bind="visible: forecast_precip_probability4">
         <span class="secondary-icon mdi" title="Rain" data-bind="visible: prefer_icons, css: forecast_precip_type_icon"></span>
