Fix #11 typoleading to misalignment

--- a/base_weatherentity/base_weatherentity.html
+++ b/base_weatherentity/base_weatherentity.html
@@ -149,7 +149,7 @@
       <div class="vertical-detail" data-bind="visible: forecast_temperature_min3">
         <span class="secondary-climacon" data-bind="css: forecast_icon3"></span>
       </div>
-      <div class="vertical-detaili vertical-detail-text" data-bind="visible: forecast_temperature_min3">
+      <div class="vertical-detail vertical-detail-text" data-bind="visible: forecast_temperature_min3">
         <span class="secondary-info" data-bind="text: forecast_temperature_min3"></span>
         <span class="secondary-info" data-bind="visible: forecast_temperature_max3">
           /<span class="secondary-info" data-bind="text: forecast_temperature_max3"></span>
